[package]
name = "map_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.24.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
config = "0.13.1"
lazy_static = "1.4.0"
hyper-tls = "0.6.0"
tower-http = { version = "0.5.1", features = ["cors"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
